@@ -6,6 +6,8 @@ CHANGE HISTORY
 
 not yet  BJH  Release 11.11.00
 
+              pamflip: add -inverse.
+
               pamdice: add -outsuffix.
 
               libnetpbm and 'ppmdraw' circle drawing functions: use floating
